[project]
name = "llm2llm"
version = "0.1.0"
description = "Experimental playground for LLM-to-LLM conversations"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "anthropic>=0.40.0",
    "click>=8.0.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "streamlit>=1.0.0",
]

[project.scripts]
llm2llm = "llm2llm.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["llm2llm"]
